Fix icon alignment

--- a/src/wunderbaum.scss
+++ b/src/wunderbaum.scss
@@ -416,7 +416,7 @@ div.wunderbaum {
     i.wb-indent {
       height: var(--wb-icon-outer-height);
       width: var(--wb-icon-outer-width);
-      padding: var(--wb-icon-padding) var(--wb-icon-padding-x);
+      padding: var(--wb-icon-padding-y) var(--wb-icon-padding-x);
       display: inline-block;
     }
 
